Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.3.1
-
None
-
Linux Ubuntu Core 14.04 64 bit on AMD APU with FGLRX driver running Qt 5.3.1 in kiosk mode full screen
-
7b7ad02681f2c28fb18d053618f6804e989b2f56
Description
when running our application we get a segmentation fault once and a while with following backtrace:
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) signal 11 (Segmentation fault), address is 1099511627784 from 139759359402696 #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (1) /usr/local/Qt-5.3.1/lib/libQt5Core.so.5(_ZN16QCoreApplication14notifyInternalEP7QObjectP6QEvent+0x48) [0x7f1c42f8a2c8] #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (2) /usr/local/Qt-5.3.1/lib/libQt5Core.so.5(_ZN16QCoreApplication14notifyInternalEP7QObjectP6QEvent+0x48) [0x7f1c42f8a2c8] #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (3) /usr/local/Qt-5.3.1/lib/libQt5Core.so.5(_ZN14QTimerInfoList14activateTimersEv+0x55d) [0x7f1c42fe0a0d] #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (4) /usr/local/Qt-5.3.1/lib/libQt5Core.so.5(+0x319d31) [0x7f1c42fe0d31] #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (5) /lib/x86_64-linux-gnu/libglib-2.0.so.0(g_main_context_dispatch+0x254) [0x7f1c3fe7be04] #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (6) /lib/x86_64-linux-gnu/libglib-2.0.so.0(+0x49048) [0x7f1c3fe7c048] #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (7) /lib/x86_64-linux-gnu/libglib-2.0.so.0(g_main_context_iteration+0x2c) [0x7f1c3fe7c0ec] #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (8) /usr/local/Qt-5.3.1/lib/libQt5Core.so.5(_ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE+0x5c) [0x7f1c42fe0ffc] #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (9) /usr/local/Qt-5.3.1/lib/libQt5Core.so.5(_ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE+0x11b) [0x7f1c42f881fb] #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (10) /usr/local/Qt-5.3.1/lib/libQt5Core.so.5(_ZN16QCoreApplication4execEv+0x86) [0x7f1c42f8f856] #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (11) ./pureTouch(main+0x30b) [0x4b9ceb] #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (12) /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7f1c41ee4ec5] #012
Aug 6 11:27:07 localhost pureTouch: ([pureTouch]) [bt]: (13) ./pureTouch() [0x4be464] #012
Attachments
Issue Links
- relates to
-
QTCREATORBUG-11262 Qt Creator crashes randomly when activating timers
-
- Closed
-